--- a/nest-app/package.json
+++ b/nest-app/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "author": "",
   "private": true,
+  
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
@@ -13,7 +14,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "lint:ext": "eslint --ext \".js,.vue\" --ignore-path .gitignore . --fix",
+    "lint_ext": "eslint --ext \".js,.vue\" --ignore-path .gitignore . --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -21,9 +22,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/static": "^7.0.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-fastify": "^10.4.5",
+    "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "^5.20.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
