--- a/react-app/package.json
+++ b/react-app/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.6",
     "@mui/x-date-pickers": "^7.22.2",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "material-react-table": "^3.0.1",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
