--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,13 +1,15 @@
 services:
-  nginx:
-    image: nginx:latest
-    container_name: nginx
+  front:
+    build:
+      context: ../
+      dockerfile: ./docker/front/dockerfile
+    container_name: front
     restart: always
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      # - ./docker/front/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - C:\Users\kanno\.ssh\budget_server.crt:/etc/nginx/ssl/budget_server.crt
       - C:\Users\kanno\.ssh\budget_server.key:/etc/nginx/ssl/budget_server.key
       # html
@@ -27,16 +29,16 @@ services:
 #       POSTGRES_DB: "budget"
 #       POSTGRES_SCHEMS: "public"
       
-#   front:
-#     build: ./front # （３）
-#     container_name: front
-#     command: bundle exec rails s -p 3000 -b '0.0.0.0' # （９）
-#     volumes: # （４）
-#       - .:/myapp
-#     ports: # （７）
-#       - "3000:3000"
-#     depends_on: # （８）
-#       - db
+  # front:
+  #   build: ./front # （３）
+  #   container_name: front
+  #   command: bundle exec rails s -p 3000 -b '0.0.0.0' # （９）
+  #   volumes: # （４）
+  #     - .:/myapp
+  #   ports: # （７）
+  #     - "3000:3000"
+  #   depends_on: # （８）
+  #     - db
 
 #   back:
 #     build: ./back # （３）
