--- a/react-app/package.json
+++ b/react-app/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --host --port 8080",
     "build": "tsc -b && vite build",
+    "publish": "tsc -b && vite build --base=../docker/front",
     "lint": "eslint .",
     "preview": "vite preview"
   },
