--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,3 +1,4 @@
+name: budget
 services:
   front:
     build:
@@ -6,50 +7,32 @@ services:
     container_name: front
     restart: always
     ports:
-      - "80:80"
       - "443:443"
     volumes:
       # - ./docker/front/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - C:\Users\kanno\.ssh\budget_server.crt:/etc/nginx/ssl/budget_server.crt
       - C:\Users\kanno\.ssh\budget_server.key:/etc/nginx/ssl/budget_server.key
-      # html
-      # - ./html:/usr/share/nginx/html
-
-#   postgres:
-#     image: postgres:latest
-#     container_name: postgres
-#     restart: always
-#     ports: 
-#       - "5432:5432"
-#     # volumes:
-#     #   - ./postgres/init:/docker-entrypoint-initdb.d
-#     environment:
-#       POSTGRES_USER: "user"
-#       POSTGRES_PASSWORD: "postgres"
-#       POSTGRES_DB: "budget"
-#       POSTGRES_SCHEMS: "public"
+      - C:\Users\kanno\.ssh\SAN.txt:/etc/nginx/ssl/SAN.txt
       
-  # front:
-  #   build: ./front # （３）
-  #   container_name: front
-  #   command: bundle exec rails s -p 3000 -b '0.0.0.0' # （９）
-  #   volumes: # （４）
-  #     - .:/myapp
-  #   ports: # （７）
-  #     - "3000:3000"
-  #   depends_on: # （８）
-  #     - db
+  back:
+    build:
+      context: ../
+      dockerfile: ./docker/back/dockerfile
+    container_name: back
+    restart: always
+    ports:
+      - "3001:3001"
 
-#   back:
-#     build: ./back # （３）
-#     container_name: front
-#     command: bundle exec rails s -p 3000 -b '0.0.0.0' # （９）
-#     volumes: # （４）
-#       - .:/myapp
-#     ports: # （７）
-#       - "3000:3000"
-#     depends_on: # （８）
-#       - db
-      
-# volumes: # （５）
-#     db_data:
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    restart: always
+    ports: 
+      - "5433:5432"
+    # volumes:
+    #   - ./postgres/init:/docker-entrypoint-initdb.d
+    environment:
+      POSTGRES_USER: "user"
+      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_DB: "budget"
+      POSTGRES_SCHEMS: "public"
