--- a/nest-app/package.json
+++ b/nest-app/package.json
@@ -6,19 +6,21 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "dotenv -e .env.production -- nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:dev": "dotenv -e .env.development -- nest start --watch",
+    "start:debug": "dotenv -e .env.development -- nest start --debug --watch",
+    "start:prod": "dotenv -e .env.production -- node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint_ext": "eslint --ext \".js,.vue\" --ignore-path .gitignore . --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migrate:prod": "dotenv -e .env.production -- npx prisma migrate dev --name init",
+    "seed:prod" : "dotenv -e .env.production -- ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@fastify/static": "^7.0.4",
