--- a/react-app/package.json
+++ b/react-app/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host --port 8080",
-    "build": "tsc -b && vite build",
+    "build:prod": "tsc -b && vite build --mode production",
     "publish": "tsc -b && vite build --base=../docker/front",
     "lint": "eslint .",
     "preview": "vite preview"
