--- a/nest-app/package.json
+++ b/nest-app/package.json
@@ -14,12 +14,13 @@
     "start:prod": "dotenv -e .env.production -- node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint_ext": "eslint --ext \".js,.vue\" --ignore-path .gitignore . --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "dotenv -e .env.test -- jest",
+    "test:watch": "dotenv -e .env.test -- jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migrate:prod": "dotenv -e .env.production -- npx prisma migrate dev --name init",
+    "migrate:reset": "dotenv -e .env.test -- npx prisma migrate reset --force --skip-seed",
     "seed:prod" : "dotenv -e .env.production -- ts-node prisma/seed.ts"
   },
   "dependencies": {
